--- a/data/util/util.ipynb
+++ b/data/util/util.ipynb
@@ -1,20 +1,14 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets import load_dataset\n",
-    "\n",
-    "ds = load_dataset(\"abisee/cnn_dailymail\", \"3.0.0\")"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
